style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500;1,700&display=swap');

:root {
    --color-body: #808080;
    --color-background: #ffffff;
    --color-text-default: #333333;
    --color-text-info: #525252;
    --color-text-info-2: #686868;
    --color-text-faded: #929292;
    --color-text-primary: #334a94;
    --color-text-accent: #5973c9;
    --color-text-hover: #62b1d6;
    --color-bg-hex-0: #efefef;
    --color-bg-hex-1: #d9ddeb;

    --layer-resume-background: 1;
    --layer-resume-content: 2;
}

@media (prefers-color-scheme: dark) {
    /* needs work */
    /* :root {
        --color-body: #333333;
        --color-background: #323336;
        --color-text-default: #d4d4d4;
        --color-text-info: #b3b3b3;
        --color-text-faded: #415bb3;
        --color-text-primary: #9db4ff;
        --color-text-accent: #5b77d1;
    } */
}

html {
    background-color: var(--color-body);
    color: var(--color-text-default);
    font-family: 'Roboto', arial, sans-serif;
}

/* layout */

body {
    /* padding: 0.5in; */
}

.resume-container {
    margin: 0 auto;
    position: relative;
    width: 8.5in;
    height: 11in;
    background-color: var(--color-background);
}

.resume-background {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: var(--layer-resume-background);
    background-color: var(--color-background);
}

.resume-content {
    position: relative;
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0.3in 0.5in;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    z-index: var(--layer-resume-content);
}

@page {
    size: 8.5in 11in;
    margin: 0;
}

.section-row {
    display: flex;
    flex-direction: row;
    gap: 1ch;
}

.col-divider {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-gap: 0.25in;
}


/* headers and paragraph */

h1, h2, h3, h4, h5, h6, p {
    margin: 0;
    display: inline-block;
    line-height: 1.3;
}

h1, h2, h3, h4, h5, h6 {
    color: var(--color-text-primary);
    font-size: 1rem;
    font-weight: 500;
    line-height: 1.1;
}

h1, h2, h3 {
    font-size: 1.25rem;
    font-weight: 700;
    text-transform: uppercase;
    letter-spacing: 0.1rem;
}

h4 {
    letter-spacing: 0.05rem;
}

p, li {
    font-size: 0.875rem;
}

h1 {
    font-size: 2.5rem;
    font-weight: 700;
    line-height: 1;
}

/* custom text */

#subtitle {
    color: var(--color-text-faded);
    font-size: 1.75rem;
    font-weight: 500;
}

#technical-skills {
    color: var(--color-text-primary);
    font-weight: 500;
    text-transform: uppercase;
}

.position-info {
    color: var(--color-text-info);
    font-style: italic;
}

.position-title {
    color: var(--color-text-default);
    font-weight: 500;
}

.text-hint {
    color: var(--color-text-info);
}

.text-small {
    font-size: 0.75rem;
}

/* lists */
ul {
    margin: 0;
    padding-left: 0.25in;
}

li {
    line-height: 1.4;
    font-size: 0.75rem;
    color: var(--color-text-info-2);
}

/* links */
a {
    color: var(--color-text-accent);
    text-decoration: none;
    font-weight: 500;
    transition: color 0.2s ease-in-out;
}

/* ignore visited decoration */
a:visited {
    color: var(--color-text-accent);
}

a:hover {
    color: var(--color-text-hover);
}

/* logo */
svg.logo {
    --stroke-width: calc(1rem * 5 / 16);
    width: 2.5rem;
    height: 2.5rem;
}

svg.logo polygon {
    fill: none;
    stroke: var(--color-text-primary);
    stroke-width: var(--stroke-width);
}

svg.logo line {
    stroke: var(--color-text-primary);
    stroke-linecap: butt;
    stroke-width: var(--stroke-width);
}

/* bg-design */

svg.bg-design {
    width: 100%;
    height: 100%;
}

svg.bg-design polygon {
    stroke-width: 0.25rem;
    stroke: var(--color-background);
}

svg.bg-design polygon.hexagon-0 {
    fill: var(--color-bg-hex-0);
}

svg.bg-design polygon.hexagon-1 {
    fill: var(--color-bg-hex-1);
}

